# fastapi-auth-example

./: .gitignore  README.md  pyproject.toml  start_app.sh
api/: database.py  main.py  models.py  populate_database.py  schemas.py  settings.py  utilities.py
api/routers/: movies.py  users.py
backend/: pyproject.toml
backend/api/: crud.py  main.py  models.py  schemas.py  settings.py  utilities.py
backend/api/routers/: auth.py  public.py  users.py
backend/tests/: test_fastapi_auth_example.py
frontend/: index.html  main.js  package-lock.json
